enum AdType { banner_image, banner_text, full_screen_image }
