enum OrderState { placed, scheduled, delivered, cancelled }
